--- a/content/resources/es-s71s14.md
+++ b/content/resources/es-s71s14.md
@@ -13,7 +13,9 @@ image_metadata:
   credit: "Image courtesy of Josa J\xFAnior on Flickr. CC BY-NC."
   image-alt: A photograph of the silhouette of a man vaulting over a wall set against
     a blue sky.
+learning_resource_types: []
 resourcetype: Image
 title: es-s71s14.jpg
+type: OCWImage
 uid: e283ee89-f16b-ff61-6039-d4558b7431ae
 ---
