--- a/content/resources/es-s71s14.md
+++ b/content/resources/es-s71s14.md
@@ -14,6 +14,7 @@ image_metadata:
   image-alt: A photograph of the silhouette of a man vaulting over a wall set against
     a blue sky.
 learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: es-s71s14.jpg
 uid: e283ee89-f16b-ff61-6039-d4558b7431ae
